<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:stretchColumns="1">

    <!-- layout_column的使用 -->
    <TableRow>
        <TextView
                android:layout_column="1"
                android:text="@string/table_layout_6_open"
                android:padding="3dip" />
        <TextView
                android:text="@string/table_layout_6_open_shortcut"
                android:gravity="right"
                android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
                android:layout_column="1"
                android:text="@string/table_layout_6_save"
                android:padding="3dip" />
        <TextView
                android:text="@string/table_layout_6_save_shortcut"
                android:gravity="right"
                android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
                android:layout_column="1"
                android:text="@string/table_layout_6_save_as"
                android:padding="3dip" />
        <TextView
                android:text="@string/table_layout_6_save_as_shortcut"
                android:gravity="right"
                android:padding="3dip" />
    </TableRow>

    <View
            android:layout_height="2dip"
            android:background="#FF909090" />

    <TableRow>
        <TextView
                android:text="@string/table_layout_6_x"
                android:padding="3dip" />
        <TextView
                android:text="@string/table_layout_6_import"
                android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
                android:text="@string/table_layout_6_x"
                android:padding="3dip" />
        <TextView
                android:text="@string/table_layout_6_export"
                android:padding="3dip" />
        <TextView
                android:text="@string/table_layout_6_export_shortcut"
                android:gravity="right"
                android:padding="3dip" />
    </TableRow>

    <View
            android:layout_height="2dip"
            android:background="#FF909090" />

    <TableRow>
        <TextView
                android:layout_column="1"
                android:text="@string/table_layout_6_quit"
                android:padding="3dip" />
    </TableRow>
</TableLayout>
