<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:stretchColumns="1"
    >

    <!-- 整行与合并列的行为是不同的，看最后添加的test和quit；剩余空间是第3列 -->
    <TableRow>
        <TextView
                android:text="@string/table_layout_5_open"
                android:padding="3dip" />
        <TextView
                android:text="@string/table_layout_5_open_shortcut"
                android:gravity="right"
                android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
                android:text="@string/table_layout_5_save"
                android:padding="3dip" />
        <TextView
                android:text="@string/table_layout_5_save_shortcut"
                android:gravity="right"
                android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
                android:text="@string/table_layout_5_save_as"
                android:padding="3dip" />
        <TextView
                android:text="@string/table_layout_5_save_as_shortcut"
                android:gravity="right"
                android:padding="3dip" />
    </TableRow>

    <View
            android:layout_height="2dip"
            android:background="#FF909090" />

    <TableRow>
        <TextView
                android:text="@string/table_layout_5_import"
                android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
                android:text="@string/table_layout_5_export"
                android:padding="3dip" />
        <TextView
                android:text="@string/table_layout_5_export_shortcut"
                android:gravity="right"
                android:padding="3dip" />
    </TableRow>

    <View
            android:layout_height="2dip"
            android:background="#FF909090" />

    <TableRow>
        <TextView
                android:text="@string/table_layout_5_quit"
                android:padding="3dip"
                android:layout_span="2"
        />
    </TableRow>
    <TextView android:text="test"
              android:gravity="right"
    />
</TableLayout>
